--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -18,14 +18,14 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;">
+<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;margin-bottom:70px;">
         <h2>Add to My Garden List</h2>
-        <p>When the plant add to my garden, the frequency timer will start.</p>
+        <p>When you successfully add the plant to your list, you frequency timer will start.</p>
         <p>Set 0 for the frequency which you do not want to use</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantId, "PlantId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Plant name</div> 
             <div class="col-md-10">
                 @Html.DropDownList("PlantId", null, htmlAttributes: new { @disabled = "disabled", @class = "form-control" })
                 @Html.HiddenFor(model => model.PlantId, new { htmlAttributes = new { @class = "form-control" }, Value = ViewBag.SelectId })
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.plantNickName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Nick Name</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-danger" })
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantWaterFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Water Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantWaterFrq Days
                 @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-danger" })
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantPruningFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Prun Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantPruningFrq Days
                 @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-danger" })
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantFertilizerFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Fertilizer Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantFertilizerFrq Days
                 @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-danger" })
@@ -66,7 +66,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantMistFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-sm-2">Mist Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantMistFrq Days
                 @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-danger" })
