--- a/PlottedAssist/Views/Dashboard/Delete.cshtml
+++ b/PlottedAssist/Views/Dashboard/Delete.cshtml
@@ -12,15 +12,15 @@
     </div>
 </div>
 
-<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;">
+<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;margin-bottom:70px;">
     <h2>Delete</h2>
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>UserPlantSet</h4>
+        
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.PlantSet.PlantCommonName)
+               Plant name
             </dt>
 
             <dd>
@@ -28,7 +28,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.plantNickName)
+               Nick Name
             </dt>
 
             <dd>
