--- a/PlottedAssist/Views/Dashboard/Edit.cshtml
+++ b/PlottedAssist/Views/Dashboard/Edit.cshtml
@@ -11,7 +11,7 @@
         <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
     </div>
 </div>
-<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;">
+<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;margin-bottom:70px;">
     <h2>Setting</h2>
 
 
@@ -20,7 +20,6 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>UserPlantSet</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
@@ -32,7 +31,7 @@
 
 
             <div class="form-group">
-                @Html.LabelFor(model => model.plantNickName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class = "control-label col-sm-2">Plant Nick Name</div> 
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-danger" })
@@ -40,7 +39,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PlantWaterFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="control-label col-sm-2">Water Frquency</div> 
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @class = "text-danger" })
@@ -48,7 +47,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PlantPruningFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="control-label col-sm-2">Prun Frquency</div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-danger" })
@@ -56,7 +55,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PlantFertilizerFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="control-label col-sm-2">Fertilizer Frquency</div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-danger" })
@@ -64,7 +63,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PlantMistFrq, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="control-label col-sm-2">Mist Frquency</div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @class = "text-danger" })
@@ -73,7 +72,7 @@
 
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="col-sm-offset-2 col-sm-10">
                     <input type="submit" value="Save" class="btn btn-default" />
                 </div>
             </div>
