--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -26,7 +26,7 @@
         <img class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:20px" src="@Url.Content("~/Picture/PlantSet/"+Model.PlantPhotoPath)">
         <!--Add plant button-->
         <div class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="text-align: center; font-family: 'Arial';margin-top:5%;margin-bottom:5%">
-            <button type="button" style="background: #344239; color:white; text-align: center;border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;">@Html.ActionLink("Add to my gargen", "../Dashboard/Create", new { id = Model.Id }) </button>
+            <a href="@Url.Content("~/Dashboard/Create/" + Model.Id)" class="btn btn-default" style="background: #344239; color:white; text-align: center;border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;">Add to my gargen</a>
         </div>
         
         <dl class="col-xs-12 col-lg-12 dl-horizontal white-word">
@@ -183,13 +183,18 @@
             </dt>
 
             <dd>
-                <P>
-                    @Html.DisplayFor(model => model.PlantBird)
-                    @Html.DisplayFor(model => model.PlantButterfly)
-                    @Html.DisplayFor(model => model.PlantBees)
-                    @Html.DisplayFor(model => model.PlantInsects)
-                    @Html.DisplayFor(model => model.PlantLarve)
-                </P>
+                
+                    @if (Model.PlantBees == "1")
+                    {<img src="~/Picture/Animal_icon/Bee.png" height="40">}
+                    @if (Model.PlantButterfly == "1")
+                    {<img src="~/Picture/Animal_icon/butterfly.png" height="40">}
+                    @if (Model.PlantBird == "1")
+                    {<img src="~/Picture/Animal_icon/Bird.png" height="40">}
+                    @if (Model.PlantInsects == "1")
+                    {<img src="~/Picture/Animal_icon/Insect.png" height="30">}
+                    @if (Model.PlantLarve == "1")
+                    {<img src="~/Picture/Animal_icon/Larve.png" height="30">}
+
             </dd>
         </dl>
     </div>
