--- a/PlottedAssist/Content/Site.css
+++ b/PlottedAssist/Content/Site.css
@@ -55,6 +55,13 @@ textarea {
     padding-top:20px;
 }
 
+.photo-look {
+    width: 450px;
+    max-width: 100%;
+    border: solid 10px white;
+    box-shadow: 2px 2px 6px 2px #1E2621;
+}
+
 /* Set hover for a*/
 a:hover {
     color: #FFFFFF;
